# TUA

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/telegram/: analysis.rs  auth.rs  export.rs  mention.rs  mod.rs
src/components/: BotList.tsx  ChatInput.tsx  ChatUrlInput.tsx  Controls.tsx  CustomSelect.tsx  FirstMentionView.tsx  LanguageSelector.tsx  LogWindow.tsx  LoginFlow.tsx  MainView.tsx  PeriodSelector.tsx  ResultsTable.tsx  StatusBar.tsx  Tooltip.tsx
src/hooks/: useElapsedTimer.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/types/: index.ts
