[package]
name = "telegram-user-activities"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegram_user_activities_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
grammers-client = { git = "https://github.com/Lonami/grammers", branch = "master" }
grammers-session = { git = "https://github.com/Lonami/grammers", branch = "master" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
once_cell = "1"
thiserror = "1"
dirs = "5"
log = "0.4"
